--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cms-employee-tracker",
   "version": "1.0.0",
+  "type": "module",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,7 +20,6 @@
   "homepage": "https://github.com/WillBerner/CMS-Employee-Tracker#readme",
   "dependencies": {
     "console.table": "^0.10.0",
-    "express": "^4.17.1",
     "inquirer": "^8.1.2",
     "mysql2": "^2.3.0"
   }
